# Indoor-Localisation

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.esp32s2
src/: CMakeLists.txt  main.cpp  platform_random.c
src/APs/201/: 201.ino
src/APs/231/: 231.ino
src/APs/236/: 236.ino
src/APs/Entrance/: Entrance.ino
src/APs/Kitchen/: Kitchen.ino
src/TOF/: responderHandler.cpp  responderHandler.h
src/core/_notUsedForNow/: accuracyBackupManager.cpp
src/core/dataManaging/: data.cpp  data.h  fileUtils.cpp  fileUtils.h  internalFlashIO.cpp  internalFlashIO.h  sdCardInit.cpp  sdCardInit.h
src/core/prediction/: predictionPhase.cpp  predictionPhase.h
src/core/scanning/: dynamicRSSIScanner.cpp  dynamicRSSIScanner.h  rssiScanner.cpp  rssiScanner.h  scanningPhase.cpp  scanningPhase.h  staticRSSIScanner.cpp  staticRSSIScanner.h  tofScanner.cpp  tofScanner.h
src/core/systemBootModeHandlers/: diagnostics.cpp  diagnostics.h  responderHandler.cpp  responderHandler.h  responderMACsCollector.cpp  responderMACsCollector.h
src/core/systemBootTest/: diagnostics.cpp  diagnostics.h
src/core/ui/: display.cpp  display.h  display_init.c  userUI.cpp  userUI.h  userUIOled.cpp  userUIOled.h  userUISerial.cpp  userUISerial.h  verifier.cpp  verifier.h
src/main/: main.ino
src/systemStateHandler/: bootHandler.cpp  bootHandler.h  fullSessionHandler.cpp  fullSessionHandler.h  predectionSessionHandler.cpp  predectionSessionHandler.h  predictionSessionHandler.cpp  predictionSessionHandler.h  responderHandler.cpp  scanningSessionHandler.cpp  scanningSessionHandler.h
(+100 files in other folders)
